Add simple design of sign up and sign in

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Login</title>
+    <title></title>
+    <link th:href="@{/styles/login.css}" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div>
-        <form method="post" th:action="@{/login}">
-            <table class="table">
-                <tbody>
-                    <tr>
-                        <td>CUBOX 이메일</td>
-                        <td><input type="text" name="username" placeholder="username" /></td>
-                    </tr>
-                    <tr style="height: 300px;">
-                        <td>비밀번호</td>
-                        <td><input type="password" name="password" placeholder="password" /></td>
-                    </tr>
-                </tbody>
-                <input type="submit" value="로그인" />
-            </table>
-        </form>
+<div th:class="page">
+    <div th:class="container">
+        <div th:class="left">
+            <div th:class="login">Login</div>
+            <div th:class="eula">CUBOX ID/PW Login</div>
+        </div>
+        <div th:class="right">
+            <div th:class="form">
+                <form th:class="login-form" th:action="@{/login}" method="post">
+                    <label for="email">Email</label>
+                    <input type="email" name="username" id="email">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password">
+                    <input type="submit" id="submit" value="로그인">
+                </form>
+            </div>
+        </div>
     </div>
+</div>
 </body>
 </html>
